# my-st

./: .gitignore  CMakeLists.txt  config.h  config.h.orig
.cache/clangd/index/: arg.h.A1C73006B2341DE5.idx  config.h.3E112BCD0CB76DA6.idx  st.c.05E2903EBC8A2A06.idx  st.h.962FD02323EBDA67.idx  win.h.775FA672DA24A0D2.idx  x.c.D1236EFF3F36F065.idx
